--- a/zerowaste-api/src/main/resources/application.properties
+++ b/zerowaste-api/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8080
 # Database Connection
 spring.datasource.url=jdbc:mysql://localhost:3306/zerowaste
 spring.datasource.username=root
-spring.datasource.password=potato4679
+spring.datasource.password=12345
 
 # JPA / Hibernate Settings
 spring.jpa.hibernate.ddl-auto=none
